--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aprendendo Git e GitHub</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Brench ou Ramificações</h1>
         </header>
         <article>
-            <h2>artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Trabalhando no conteúdo</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, nostrum ratione nulla nobis exercitationem cupiditate amet quibusdam laboriosam reiciendis magnam consequatur atque, alias est ullam deserunt libero fugit? Animi, nihil.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>HTML e CSS</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis maiores odio sint saepe dolore architecto, enim vel autem consequatur incidunt et soluta adipisci eaque iusto quos omnis ab rerum eveniet!</p>
         </article>
     </main>
 </body>
